style.css
*
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
    color: #ffffff;
}

body
{
    background-color: #fbf9f9;
}

.maze
{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

#settings
{
    position: absolute;
    padding: 1.5rem;
    top: 50%;
    left: 50%;
    width: 50%;
    height: 30%;
    transform: translate(-50%, -50%);
    text-align: center;
    border: 1px solid black;
    border-radius: 10px;
    background-color: #161616;
    font-size: 0.8rem;
    z-index: 2;
}

input
{
    margin-bottom: 1rem;
    background-color: #161616;
    text-align: center;
    font-size: 20px;
    border: none;
    border-bottom: 2px solid #ffffff;
    padding: 3px;
    margin-top: 0.2rem;
}

#submit
{
    background-color: #161616;
    border: 1px solid #ffffff;
    border-radius: 10px;
    padding: 0.4rem;
    cursor: pointer;
    margin: 1rem;
    padding: 1rem;
    font-weight: bold;
}

#submit:hover
{
    opacity: 0.7;
}

.complete1
{
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    height: 30%;
    background: #000000;
    z-index: 4;
    padding: 2rem;
    text-align: center;
    border: 2px white solid;
    border-radius: 10px;
}

.complete2
{
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    height: 30%;
    background: #000000;
    z-index: 4;
    padding: 2rem;
    text-align: center;
    border: 2px white solid;
    border-radius: 10px;
}

.complete3
{
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    height: 30%;
    background: #000000;
    z-index: 4;
    padding: 2rem;
    text-align: center;
    border: 2px white solid;
    border-radius: 10px;
}

.complete4
{
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    height: 30%;
    background: #000000;
    z-index: 4;
    padding: 2rem;
    text-align: center;
    border: 2px white solid;
    border-radius: 10px;
}

.title
{
    position: absolute;
    left: 40%;
    top: 5%;
    color: black;
    font-family: sans-serif;
    font-weight: bold;
}

.footer
{
    position: absolute;
    text-align: center;
    left: 42%;
    top: 87%;
    font-size: 15px;
    color: black;
    font-family: sans-serif;
    font-weight: bold;
}

